Supporting more languages

--- a/main.html
+++ b/main.html
@@ -1542,6 +1542,48 @@
 
       </article>
 
+      <article class="preferences-language-element french beta">
+
+        <figure class="frenchFlag"></figure>
+        <span class="preferences-language-element-french"></span>
+
+      </article>
+
+      <article class="preferences-language-element portuguese beta">
+
+        <figure class="portugueseFlag"></figure>
+        <span class="preferences-language-element-portuguese"></span>
+
+      </article>
+
+      <article class="preferences-language-element italian beta">
+
+        <figure class="italianFlag"></figure>
+        <span class="preferences-language-element-italian"></span>
+
+      </article>
+
+      <article class="preferences-language-element russian beta">
+
+        <figure class="russianFlag"></figure>
+        <span class="preferences-language-element-russian"></span>
+
+      </article>
+
+      <article class="preferences-language-element german beta">
+
+        <figure class="germanFlag"></figure>
+        <span class="preferences-language-element-german"></span>
+
+      </article>
+
+      <article class="preferences-language-element chinese beta">
+
+        <figure class="chineseFlag"></figure>
+        <span class="preferences-language-element-chinese"></span>
+
+      </article>
+
     </section>
 
     <!-- WARNING: FILE EXTENSIONS DOES NOT WORK -->
